<resources>
    <string name="app_name">CHECKIN</string>

    <string name="reception">Check Out</string>
    <string name="restaurant">Restaurant</string>
    <string name="laundry">Laundry</string>
    <string name="cleanUp">Clean Up</string>
    <string name="sos">SOS</string>
    <string name="dnd">DND</string>
    <string name="checkout">Checkout</string>
    <string name="gym">Gym</string>
    <string name="roomService">Room Service</string>
    <string name="openDoor">Open Door</string>
    <string name="title_activity_restaurant">Restaurant</string>
    <string name="title_activity_log_in">Register</string>
    <string name="RegistButton">Regist</string>
    <string name="RoomNumber">Enter Room Number</string>
    <string name="Password">Enter Password</string>
    <string name="Floor">Enter Floor Number</string>
    <string name="confermationDialog_Caption">Confermation Dialog</string>
    <string name="confermationDialog_text">Are You Sure</string>
    <string name="title_activity_minibar__menu">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="roomVacant">Room vacant</string>
    <string name="welcomeRoom">Welcome </string>
    <string name="roomIsUnready">Room is unready</string>
    <string name="roomIsOutOfService">Room is out of service</string>
    <string name="livingMood">Living Mood</string>
    <string name="sleepingMood">Sleeping Mood</string>
    <string name="workMood">Work Mood</string>
    <string name="romanceMood">Romance Mood</string>
    <string name="readingMood">Reading Mood</string>
    <string name="masterOffMood">MasterOff</string>
    <string name="low">Low</string>
    <string name="auto">Auto</string>
    <string name="high">High</string>
    <string name="med">Med</string>
    <string name="ac">AC</string>
    <string name="backToService">Back to services</string>
    <string name="laundryPriceList">Laundry PriceList</string>

    <string name="lights">Lights</string>
    <string name="lightsAndMoods">Lights &amp; Moods</string>
    <string name="services">Services</string>
    <string name="backHome">Home</string>
    <string name="back">Back</string>

    <string name="loggingInProject">Logging In Project</string>
    <string name="gettingProjectVariables">Getting Project Settings</string>
    <string name="sendSOSOrder">Send Emergency Order ..?</string>
    <string name="gettingProjects">Getting Projects</string>
    <string name="gettingBuildings">Getting Buildings</string>
    <string name="gettingFloors">Getting Floors</string>
    <string name="gettingRoomTypes">Getting Room Types</string>
    <string name="gettingRooms">Getting Rooms</string>
    <string name="gettingRoomDevices">Getting Room Devices</string>


    <string name="admin_receiver_label">Tesk Kiosk label</string>
    <string name="admin_receiver_description">Tesk Kiosk description</string>

</resources>
