<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rightSlide"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context=".Cart">

    <LinearLayout
        android:id="@+id/header_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/date_bar_background"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mainDate"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="textStart"
            android:textColor="@color/light_blue_A200"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <ImageView
            android:id="@+id/SOS_Icon"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/group_54"
            android:contentDescription="@string/sos" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/towels"
            android:contentDescription="@string/roomService" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/cleanup_btn"
            android:contentDescription="@string/cleanUp" />

        <ImageView
            android:id="@+id/DND_Icon"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/union_6"
            android:contentDescription="@string/dnd" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/subtraction_10"
            android:contentDescription="@string/restaurant" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/laundry_btn"
            android:contentDescription="@string/laundry" />

        <ImageView
            android:id="@+id/imageView20"
            android:layout_width="25dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            app:srcCompat="@drawable/checkout"
            android:contentDescription="@string/checkout" />

        <TextView
            android:id="@+id/mainTime"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:textAlignment="textEnd"
            android:textColor="@color/light_blue_A200"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />
    </LinearLayout>

    <TextView
        android:id="@+id/CAPTION4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="SERVICES"
        android:textColor="@color/light_blue_A200"
        android:textSize="18sp"
        android:visibility="visible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/home_Btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_bg_normal"
            android:gravity="center"
            android:onClick="backToMain"
            android:paddingStart="12dp"
            android:paddingTop="7dp"
            android:paddingEnd="7dp"
            android:paddingBottom="7dp"
            android:visibility="visible">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:visibility="visible"
                app:srcCompat="@drawable/home" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_bg_normal"
            android:onClick="back"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView21"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:paddingStart="5dp"
                app:srcCompat="@android:drawable/ic_media_play" />
        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:fillViewport="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/servicebtns_background"
                    android:gravity="center_vertical"
                    android:paddingStart="20dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="20dp"
                    android:paddingBottom="10dp"
                    android:text="Order Pack"
                    android:textColor="@color/light_blue_A200"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:foregroundGravity="center" />

            <LinearLayout
                android:id="@+id/totalLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@drawable/servicebtns_background"
                    android:gravity="center"
                    android:onClick="sendOrder"
                    android:text="Send Order"
                    android:textColor="@color/light_blue_A200"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="Order Total"
                    android:textAlignment="center"
                    android:textColor="@color/light_blue_A200"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/doneLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:text="تم ارسال طلبك"
                    android:textAlignment="center"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/ActionBtnsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/light_blue_A400"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="SOS"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/trasparent">

            <ImageView
                android:id="@+id/SOS_Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/group_33" />

            <TextView
                android:id="@+id/SOS_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="5dp"
                android:text="SOS"
                android:textColor="@color/light_blue_A200"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Door_Button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="OpenTheDoor"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/trasparent">

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/open_door" />

            <com.wang.avi.AVLoadingIndicatorView
                android:id="@+id/loadingIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:visibility="gone"
                app:indicatorName="LineSpinFadeLoaderIndicator" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="5dp"
                android:text="OPEN DOOR"
                android:textColor="@color/light_blue_A200"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dndBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:onClick="setDND"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/trasparent">

            <ImageView
                android:id="@+id/DND_Image"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal|top"
                app:srcCompat="@drawable/union_2" />

            <TextView
                android:id="@+id/DND_Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="5dp"
                android:text="DND"
                android:textColor="@color/light_blue_A200"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>